@@ -11,4 +11,5 @@ WORKDIR /app
 COPY --from=build /app/target/*.jar /app/app.jar
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","/app/app.jar"]
-
+ENV JAVA_TOOL_OPTIONS="--add-opens java.base/java.io=ALL-UNNAMED"
+ENV SPRING_PROFILES_ACTIVE=prod
